src/main/java/com/example/shopapp/error/exception/InvalidPasswordException.java
package com.example.shopapp.error.exception;

public class InvalidPasswordException extends Exception{

    public InvalidPasswordException(String message) {
        super(message);
    }
}
